compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_sizing_overflow.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : array 0..16#7FFFFFFF, 0..16#7FFFFFFF of int"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No)), range of `int` (Unevaluated(LibraryId(0), BodyId(2)) .. Expr(Unevaluated(LibraryId(0), BodyId(3)), No)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 9..52: `array` has too many elements
| error in file FileId(1) for 9..52: overflow while computing element count
