compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_zero_flexible_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type _ : flexible array 1..0 of int"

---
"_"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of flexible array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No)), ) of int
"<root>"@(dummy) [Declared]: <error>

