compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_zero_static_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : array 1..0 of int"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 15..19: element range is too small
| note in file FileId(1) for 15..19: computed range size is 0
| error in file FileId(1) for 15..19: zero sized ranges cannot be used in `array` types that aren't `flexible`
