compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_lhs_not_mut_is_const.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "const j : int := 2\nconst k : int := 3\nk := j\n"

---
"j"@(FileId(1), 6..7) [Declared]: int
"k"@(FileId(1), 25..26) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 40..42: cannot assign into `k`
| error in file FileId(1) for 38..39: `k` is a reference to a constant, not a variable
| note in file FileId(1) for 25..26: `k` declared here
