compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_lhs_not_mut_missing_rhs.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const j : int := 1\nj := \n"

---
"j"@(FileId(1), 6..7) [Declared]: ref int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 21..23: cannot assign into expression
| note in file FileId(1) for 19..20: not a reference to a variable
