compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_mismatched_types.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var lhs : int\nlhs := 1 + 1.0\n"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(0))) TyRef(Int(Int))
def_kinds:
    DefId(0) Var(TyRef(Int(Int)))
error at 18..20: mismatched types
