compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_rhs_not_value.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type j : int var k : int k := j"

---
"j"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"k"@(FileId(1), 17..18) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 30..31: cannot use `j` as an expression
| error in file FileId(1) for 30..31: `j` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `j` declared here
