compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_valid_compound_add.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var lhs : real\nvar rhs : int\nlhs += rhs\n"

---
"lhs"@(FileId(1), 4..7) [Declared]: real
"rhs"@(FileId(1), 19..22) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

