compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_bind_decl_from_expr.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "begin\nbind you to false\nend"

---
"you"@(FileId(1), 11..14) [Declared]: boolean
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 6..23: cannot bind `you` to expression
| error in file FileId(1) for 18..23: not a reference to a variable
