compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_bind_decl_from_register.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "begin\nconst register reg := 1\nbind you to reg, var me to reg\nend\n"

---
"reg"@(FileId(1), 21..24) [Declared]: int
"you"@(FileId(1), 35..38) [Declared]: int
"me"@(FileId(1), 51..53) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 35..45: cannot bind `you` to `reg`
| error in file FileId(1) for 42..45: `reg` is a reference to a constant register, not a variable
| note in file FileId(1) for 21..24: `reg` declared here
| info: registers don't have a location in memory, so they cannot be bound to
error in file FileId(1) at 47..60: cannot bind `me` to `reg`
| error in file FileId(1) for 57..60: `reg` is a reference to a constant register, not a variable
| note in file FileId(1) for 21..24: `reg` declared here
| info: registers don't have a location in memory, so they cannot be bound to
